# stm32-discover

./: .clang-format  CMakeLists.txt  linker_script.ld
Core/Src/: main.c
Drivers/CMSIS/Device/ST/STM32F3xx/Include/: stm32f3xx.h
Drivers/STM32F3xx_HAL_Driver/Inc/: stm32f3xx_hal_def.h  stm32f3xx_hal_gpio.h
Drivers/STM32F3xx_HAL_Driver/Src/: stm32f3xx_hal.c  stm32f3xx_hal_gpio.c
blink/: CMakeLists.txt
blink/Core/Src/: main.c
blink/cmake/: arm-none-eabi-gcc.cmake
blink/cmake/drivers/: CMakeLists.txt
button/: CMakeLists.txt  linker_script.ld  startup.s
button/Core/Inc/: stm32f3xx_hal_conf.h
button/Core/Src/: main.c  system.c
button/cmake/: arm-none-eabi-gcc.cmake
button/cmake/drivers/: CMakeLists.txt
button/lib_cm4/Include/: lib_cm4_sys_tick.h
button/lib_cm4/Src/: lib_cm4_sys_tick.c
cmake/drivers/: CMakeLists.txt  cmake_install.cmake
